--- a/dev/index.html
+++ b/dev/index.html
@@ -8,10 +8,10 @@
     <meta name="keywords" content="Guilherme, Caponetto" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="preload" as="image" href="/static/images/avatar.webp" alt="Guilherme Caponetto" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16x16.png" />
+    <link rel="preload" as="image" href="static/images/avatar.webp" alt="Guilherme Caponetto" />
+    <link rel="apple-touch-icon" sizes="180x180" href="static/favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="static/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="static/favicon/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body style="min-height: 100vh">
