--- a/dev/index.html
+++ b/dev/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="static/favicon/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="static/favicon/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="static/favicon/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="manifest" href="site.webmanifest" />
   </head>
   <body style="min-height: 100vh">
     <!-- gtm:body -->
