--- a/index.html
+++ b/index.html
@@ -1,40 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!-- Google Tag Manager -->
-    <script>
-      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','GTM-TX4N6TH');
-    </script>
-    <!-- End Google Tag Manager -->
-    <title>Guilherme Caponetto</title>
-    <meta charset="UTF-8" />
-    <meta name="description" content="Guilherme Caponetto" />
-    <meta name="keywords" content="Guilherme, Caponetto" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="preload" as="image" href="static/images/avatar.webp" alt="Guilherme Caponetto" />
-    <link rel="apple-touch-icon" sizes="180x180" href="static/favicon/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="static/favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="static/favicon/favicon-16x16.png" />
-    <link rel="manifest" href="site.webmanifest" />
-  </head>
-  <body style="min-height: 100vh">
-    <!-- Google Tag Manager (noscript) -->
-    <noscript>
-      <iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-TX4N6TH"
-        height="0"
-        width="0"
-        style="display:none;visibility:hidden"
-      >
-      </iframe>
-    </noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    <div id="app"></div>
-    <script src="index.js"></script>
-  </body>
-</html>
+<!DOCTYPE html> <html lang="en"> <head> <script>!function(e,t,a,n,g){e[n]=e[n]||[],e[n].push({"gtm.start":(new Date).getTime(),event:"gtm.js"});var m=t.getElementsByTagName(a)[0],r=t.createElement(a);r.async=!0,r.src="https://www.googletagmanager.com/gtm.js?id=GTM-TX4N6TH",m.parentNode.insertBefore(r,m)}(window,document,"script","dataLayer")</script> <title>Guilherme Caponetto</title> <meta charset="UTF-8"/> <meta name="description" content="Guilherme Caponetto is a Machine Learning enthusiast currently working as Senior Software Engineer at Red Hat."/> <meta name="keywords" content="Guilherme, Caponetto"/> <meta name="viewport" content="width=device-width,initial-scale=1"/> <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> <link rel="preload" as="image" href="static/images/avatar.webp" alt="Guilherme Caponetto"/> <link rel="apple-touch-icon" sizes="180x180" href="static/favicon/apple-touch-icon.png"/> <link rel="icon" type="image/png" sizes="32x32" href="static/favicon/favicon-32x32.png"/> <link rel="icon" type="image/png" sizes="16x16" href="static/favicon/favicon-16x16.png"/> <link rel="manifest" href="site.webmanifest"/> </head> <body style="min-height:100vh"> <noscript> <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TX4N6TH" height="0" width="0" style="display:none;visibility:hidden"> </iframe> </noscript> <div id="app"></div> <script src="index.js"></script> </body> </html> 
